--- a/style/stilos.css
+++ b/style/stilos.css
@@ -7,21 +7,20 @@
 body {
   background-color: #008000;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  /* place-items: center; */
+  display: grid;
+  place-items: center;
   overflow-y: hidden;
 }
 
 #game-box {
-  width:500px;
-  height:1200px;
-  /* background-image: url("../imagenes/road.png"); */
-  /* background-repeat: repeat-y;
-  background-position: center; */
+  width:50vw;
+  height:1200vh;
+  background-image: url("../imagenes/road.png");
+  background-repeat: repeat-y;
+  background-position: center;
   position: relative;
   top: -80vh;
-  /* z-index: -9; */
+  z-index: -9;
 }
 
 #start-btn {
@@ -36,26 +35,26 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* z-index: 100; */
+  z-index: 100;
 }
 
 #restart-btn {
   display: none;
 }
 
-/* .container {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 50px;
-} */
+}
 
-/* #wingame-screen, #gameover-screen {
+#wingame-screen, #gameover-screen {
   display: none;
-} */
+}
 
-/* #alonso {
+#alonso {
   position: absolute;
   top: 15vh;
 }
@@ -63,14 +62,14 @@ body {
 #alonso img {
   width: 70px;
   height: 140px;
-} */
+}
 
 
-/* @keyframes roadMovement {
+@keyframes roadMovement {
   0% {
     top: -1100vh;
   }
   100% {
     top: -200vh;
   }
-} */
+}
