--- a/style/stilos.css
+++ b/style/stilos.css
@@ -60,11 +60,84 @@ body {
 
 .restart-btn {
   background-color: black;
-  color: red;
-  padding: 20px;
-  font-size: 20px;
+  cursor: pointer;
+  color: #fff;
+  padding: 16px 32px;
+  font-size: 24px;
+  font-weight: bold;
+  position: relative;
+  border-radius: 12px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   border-radius: 20px;
+}
+
+.restart-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    45deg,
+    red, blue, deeppink, blue, 
+    red, blue, deeppink, blue
+  );
+  background-size: 800%;
+  border-radius: 10px;
+  filter: blur(8px);
+  animation: glowing 20s linear infinite;
+
+}
+
+#clasif, p {
+  color: aquamarine;
+}
+
+
+#clasif {
+  background-color: black;
+  cursor: pointer;
+  color: #fff;
+  padding: 16px 32px;
+  font-size: 24px;
+  font-weight: bold;
+  position: relative;
+  border-radius: 12px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 20px;
+}
+
+#clasif::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    45deg,
+    red, blue, deeppink, blue, 
+    red, blue, deeppink, blue
+  );
+  background-size: 800%;
+  border-radius: 10px;
+  filter: blur(8px);
+  animation: glowing 20s linear infinite;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
 
 #gameover-screen, #wingame-screen {
